environments/dev/apps/app-application-stack-intro/services/application-stack-intro/base/config/100-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: application-stack-intro
    app.kubernetes.io/part-of: app-application-stack-intro
  name: application-stack-intro
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: application-stack-intro
      app.kubernetes.io/part-of: app-application-stack-intro
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: application-stack-intro
        app.kubernetes.io/part-of: app-application-stack-intro
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/cicd/application-stack-intro
        imagePullPolicy: Always
        name: application-stack-intro
        ports:
        - containerPort: 9080
        resources: {}
        readinessProbe:
          failureThreshold: 12
          httpGet:
            path: /health/ready
            port: 9080
          initialDelaySeconds: 5
          periodSeconds: 2
          timeoutSeconds: 1
        livenessProbe:
          failureThreshold: 12
          httpGet:
            path: /health/live
            port: 9080
          initialDelaySeconds: 5
          periodSeconds: 2
        expose: true
      serviceAccountName: default
status: {}
