environments/dev/apps/app-application-stack-intro/services/application-stack-intro/base/config/200-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: application-stack-intro
    app.kubernetes.io/part-of: app-application-stack-intro
  name: application-stack-intro
  namespace: dev
spec:
  type: ClusterIP
    port: 9080
    annotations:
      prometheus.io/scrape: 'true'
  selector:
    app.kubernetes.io/name: application-stack-intro
    app.kubernetes.io/part-of: app-application-stack-intro
status:
  loadBalancer: {}
