environments/dev/apps/app-application-stack-intro/services/application-stack-intro/base/config/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: application-stack-intro
  namespace: dev
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: application-stack-intro
    weight: 100
  wildcardPolicy: None
